--- a/app/src/main/res/layout/layout_head.xml
+++ b/app/src/main/res/layout/layout_head.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="65dp"
-    android:background="@color/gray_f3f3f3"
+    android:layout_height="70dp"
+    android:id="@+id/ll_head"
+    android:background="@color/white_ffffff"
     android:orientation="vertical">
 
     <View
@@ -12,6 +13,7 @@
 
     <RelativeLayout
         android:id="@+id/rl_bar"
+        android:layout_marginStart="10dp"
         android:layout_width="match_parent"
         android:layout_height="45dp">
 
@@ -24,6 +26,7 @@
             android:background="?android:attr/selectableItemBackground">
 
             <ImageView
+                android:id="@+id/iv_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -59,5 +62,10 @@
         </RelativeLayout>
 
     </RelativeLayout>
+
+    <View
+        android:background="@color/gray_f3f3f3"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
 
 </LinearLayout>
