--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,26 +5,25 @@
     android:layout_height="match_parent"
     tools:context=".dragon.ui.activity.MainActivity">
 
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp_main"
+    <FrameLayout
+        android:id="@+id/rl_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="51dp" />
 
     <View
-        android:background="@color/gray_f3f3f3"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_above="@+id/rl_bottom" />
+        android:layout_above="@+id/rl_bottom"
+        android:background="@color/gray_f3f3f3" />
 
     <RelativeLayout
         android:id="@+id/rl_bottom"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:clipChildren="false"
         android:layout_alignParentBottom="true"
-        android:background="@color/blue_87c7e4">
+        android:background="@color/blue_87c7e4"
+        android:clipChildren="false">
 
         <include layout="@layout/layout_home_bottom" />
 
