--- a/app/src/main/res/layout/activity_community_detail.xml
+++ b/app/src/main/res/layout/activity_community_detail.xml
@@ -1,82 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".dragon.ui.activity.CommunityDetailActivity">
 
-    <com.scwang.smartrefresh.layout.SmartRefreshLayout
-        android:id="@+id/refreshLayout"
+    <com.scwang.smartrefresh.layout.header.ClassicsHeader
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:srlEnablePreviewInEditMode="false">
+        android:layout_height="wrap_content"/>
 
-        <com.scwang.smartrefresh.layout.header.ClassicsHeader
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/app_bar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srlAccentColor="@color/black_333333" />
+            android:layout_height="wrap_content">
 
-        <android.support.v4.widget.NestedScrollView
-            android:id="@+id/scrollView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:overScrollMode="never"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-            <LinearLayout
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapse"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:background="@color/white_ffffff"
+                app:contentScrim="@color/white_ffffff"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:titleEnabled="false">
 
-                <android.support.design.widget.AppBarLayout
-                    android:id="@+id/app_bar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <android.support.v7.widget.Toolbar
-                        android:id="@+id/toolbar"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:background="@color/colorPrimary"
-                        android:elevation="2dp"
-                        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                        android:visibility="gone">
-
-                        <android.support.v7.widget.ButtonBarLayout
-                            android:id="@+id/buttonBarLayout"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center">
-
-                            <TextView
-                                android:id="@+id/title"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:text="Darcy"
-                                android:textColor="@color/white_ffffff"
-                                android:textSize="18sp" />
-
-                        </android.support.v7.widget.ButtonBarLayout>
-
-
-                    </android.support.v7.widget.Toolbar>
-
-                </android.support.design.widget.AppBarLayout>
-
-                <android.support.design.widget.CollapsingToolbarLayout
-                    android:id="@+id/collapse"
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    app:contentScrim="?attr/colorPrimary"
-                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                    app:titleEnabled="false">
+                    android:background="@color/white_ffffff"
+                    android:paddingTop="20dp">
 
-                    <RelativeLayout
+                    <View
+                        android:id="@+id/view"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="25dp"
+                        android:background="@color/white_ffffff" />
+
+                    <LinearLayout
+                        android:id="@+id/ll_head"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/view"
+                        android:orientation="horizontal">
 
                         <de.hdodenhof.circleimageview.CircleImageView
                             android:id="@+id/cv_head"
@@ -92,59 +60,67 @@
                             android:id="@+id/tv_nickName"
                             android:layout_width="wrap_content"
                             android:layout_height="40dp"
-                            android:layout_alignParentTop="true"
-                            android:layout_centerInParent="true"
                             android:layout_marginStart="10dp"
-                            android:layout_toEndOf="@+id/cv_head"
                             android:gravity="center"
                             android:text="微笑的小丑"
                             android:textColor="@color/colorAccent"
                             android:textSize="14sp" />
+                    </LinearLayout>
 
-                        <TextView
-                            android:id="@+id/tv_long_des"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@+id/cv_head"
-                            android:layout_marginTop="10dp"
-                            android:paddingStart="10dp"
-                            android:paddingEnd="10dp"
-                            android:textColor="@color/black_333333"
-                            android:textSize="14sp" />
+                    <TextView
+                        android:id="@+id/tv_long_des"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/ll_head"
+                        android:layout_marginTop="10dp"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"
+                        android:textColor="@color/black_333333"
+                        android:textSize="14sp" />
 
-                        <com.kaha.dragon.dragon.widget.ninelayout.NineGridTestLayout
-                            android:id="@+id/nine_images"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/tv_long_des"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginEnd="10dp"
-                            app:oneImageHeight="320dp"
-                            app:oneImageWidth="250dp" />
+                    <com.kaha.dragon.dragon.widget.ninelayout.NineGridTestLayout
+                        android:id="@+id/nine_images"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/tv_long_des"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="10dp"
+                        app:oneImageHeight="320dp"
+                        app:oneImageWidth="250dp" />
+                </RelativeLayout>
 
-                    </RelativeLayout>
-                </android.support.design.widget.CollapsingToolbarLayout>
-
-                <android.support.design.widget.TabLayout
-                    android:id="@+id/tabs"
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:background="@color/gray_f3f3f3"
-                    app:tabIndicatorColor="@color/yellow_fed943"
-                    app:tabIndicatorHeight="3dp"
-                    app:tabSelectedTextColor="@color/yellow_fed943"
-                    app:tabTextColor="@color/black_333333" />
+                    android:elevation="2dp"
+                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+            </android.support.design.widget.CollapsingToolbarLayout>
 
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/viewPager"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/white_ffffff" />
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="@color/gray_f3f3f3"
+                app:tabIndicatorColor="@color/yellow_fed943"
+                app:tabIndicatorHeight="3dp"
+                app:tabSelectedTextColor="@color/yellow_fed943"
+                app:tabTextColor="@color/black_333333" />
+        </android.support.design.widget.AppBarLayout>
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:overScrollMode="never"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            </LinearLayout>
-
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewPager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white_ffffff"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
         </android.support.v4.widget.NestedScrollView>
-    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
-
-</FrameLayout>
+    </android.support.design.widget.CoordinatorLayout>
+</com.scwang.smartrefresh.layout.SmartRefreshLayout>
