增加圈子,萌宠

--- a/app/src/main/res/layout/fragment_recommend_people.xml
+++ b/app/src/main/res/layout/fragment_recommend_people.xml
@@ -3,10 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycleView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="我信你个鬼"
-        android:textSize="40sp" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
