--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -13,7 +13,7 @@
         android:adjustViewBounds="true"
         android:contentDescription="@string/app_name"
         android:scaleType="centerCrop"
-        android:src="@mipmap/sea"
+        android:src="@mipmap/girl0"
         app:layout_collapseMode="parallax" />
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
@@ -164,7 +164,6 @@
                 android:textSize="18sp" />
 
         </android.support.v7.widget.ButtonBarLayout>
-
 
     </android.support.v7.widget.Toolbar>
 
