--- a/app/src/main/res/layout/layout_mine_item.xml
+++ b/app/src/main/res/layout/layout_mine_item.xml
@@ -46,7 +46,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:scaleType="centerCrop"
-            android:src="@mipmap/huzhao1" />
+            android:src="@mipmap/ic_launcher" />
 
         <View
             android:layout_width="2dp"
@@ -57,7 +57,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:scaleType="centerCrop"
-            android:src="@mipmap/huzhao2" />
+            android:src="@mipmap/ic_launcher" />
 
         <View
             android:layout_width="2dp"
@@ -68,7 +68,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:scaleType="centerCrop"
-            android:src="@mipmap/huzhao3" />
+            android:src="@mipmap/ic_launcher" />
     </LinearLayout>
 
     <LinearLayout
